[package]
authors = ["Y. D. Santos <yds12@protonmail.com>"]
name = "visual"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Use Display if available, Debug otherwise"
homepage = "https://github.com/yds12/visual"
repository = "https://github.com/yds12/visual"
readme = "README.md"
documentation = "https://docs.rs/visual/latest/"
keywords = ["display", "debug", "print", "format", "string"]
categories = ["development-tools", "development-tools::debugging", "development-tools::testing", "rust-patterns", "value-formatting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
